<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/luvcolor">

    <TextView
        android:id="@+id/luv"
        style="@style/TextContext.1"
        android:layout_marginTop="24dp"
        android:text="@string/withluv"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_luv"
        android:layout_width="180dp"
        android:layout_height="122dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/boywithluv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bts"
        style="@style/TextContext.1"
        android:text="@string/BTS"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/luv" />

    <ImageView
        android:id="@+id/btn_play"
        style="@style/TextContext.1"
        android:layout_marginTop="8dp"
        android:src="@drawable/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bts" />

    <TextView
        android:id="@+id/playall"
        style="@style/TextContext.1"
        android:layout_marginTop="130dp"
        android:text="@string/play"
        app:layout_constraintStart_toEndOf="@+id/btn_play"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/share"
        app:layout_constraintEnd_toStartOf="@+id/img_luv"
        app:layout_constraintStart_toEndOf="@+id/playall"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>